--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -469,7 +469,9 @@
   "Identification has already been verified": "La identificación ya ha sido verificada",
   "Image created": "Imagén creada",
   "Image updated": "Imagén actualizada",
+  "Image deleted": "Imagén eliminada",
   "Image not found": "Imagén no encontrada",
+  "An error occurred while deleting the image": "Ocurrió un error al eliminará la imagén",
   "The code has been sent. please check your email": "El código ha sido enviado, por favor revise su correo electrónico.",
   "Verification code is invalid": "El código de verificación no es válido.",
   "Email already verified": "Correo electrónico ya verificado.",
